--- a/style.css
+++ b/style.css
@@ -69,7 +69,9 @@ body{
 .fetured-area h2,
 .latest-news h2,
 .client-area h2,
-.faq-area h2{
+.faq-area h2,
+.contract-area h2,
+.brand-bike h2{
     font-size: 48px;
     font-weight: 600;
 }
@@ -162,6 +164,9 @@ body{
 /* ********************************************************
 ****************** FAQ area style here ****************
 ***********************************************************/
+.faq-area{
+    margin-bottom: 100px;
+}
 .accordion-button{
     font-size: 20px;
     font-weight: 500;
@@ -182,4 +187,78 @@ body{
     border:1px solid #D5E5FB;
     border-radius: 5px;
 
+}
+
+
+/* **************************************************************
+*****************Contact area style here**************************
+**************************************************************** */
+.contact-box{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 140px;
+}
+.contact-form{
+    width:45%;
+    margin-right: 10%;
+    
+}
+
+.contact-form h3{
+    margin-bottom: 20px;
+}
+.contact-form form input,
+.contact-form textarea{
+    box-sizing: border-box;
+    width:100%;
+    padding:10px 20px;
+    margin-bottom: 10px; 
+    font-size: 18px;
+    border:none;
+    background: #E7E7E8;
+    outline-color: #E76F51;
+    
+}
+.contact-form input[type="submit"]{
+    width:100%;
+    color:#000;
+    font-weight: 700;
+    border:2px solid #E76F51;
+    color:#E76F51;
+    cursor: pointer;
+    transition: all .5s ease;
+}
+.contact-form input[type="submit"]:hover{
+    background-color: #E76F51;
+    color:#FFFFFF;
+}
+.contact-map{
+  width:45%;
+}
+.contact-map iframe{
+  width:100%;
+}
+
+.brand-bike{
+    margin-bottom: 60px;
+}
+/* **************************************************************
+*****************Footer area style here**************************
+**************************************************************** */
+.footer{
+    background: #0B0D17;
+}
+.copyright-text p{
+    font-size: 14px;
+    color:#D9DBE1;
+    margin-top:24px;
+    margin-left:10px;
+}
+.get-the-app h5{
+    color:#D9DBE1;
+    font-size: 18px;
+}
+.play-store{
+    border:1px solid #ddd;
+    border-radius: 5px;
 }
